Lagt till kommentar

--- a/rapport.html
+++ b/rapport.html
@@ -116,6 +116,7 @@
         <section>
             <h2>4. Bilder</h2>
             <!-- Beskriv i en punktlista vilka redigeringar du gjort av bilderna i ett bildredigeringsprogram, för att anpassa dem till hur du använder dem på din webbplats. -->
+            <p>Alla bilderna på hemsidan är genererade med AI.</p>
             <p>Bilderna har redigerats i ett bildredigeringsprogram, där följande gjorts:</p>
             <ul>
                 <li>Bilderna har beskurits för att skapa ett enhetligt intryck.</li>
