öagt till lokal nav till sidor

--- a/recept-glass.html
+++ b/recept-glass.html
@@ -10,15 +10,18 @@
 <body class="recept">
   <header>
     <img src="image/creamilab-logo.png" alt="CreamiLab icon">
-    <nav>
-      <a href="index.html">Start</a>
-      <a href="recept.html">Recept</a>
-      <a href="skicka-in.html">Skicka in ditt recept</a>
-      <a href="om-oss.html">Om oss</a>
-    </nav>
   </header>
 
   <main class="recept-layout">
+        <nav class="recept-nav">
+          <h3>Utforska fler sidor</h3>
+          <ul>
+            <li><a href="index.html">Start</a></li>
+            <li><a href="skicka-in.html">Skicka in recept</a></li>
+            <li><a href="om-oss.html">Om oss</a></li>
+            
+          </ul>
+        </nav>
         <a href="recept.html" class="tillbaka-knapp">Tillbaka till recept</a>
 
         <div class="recept-bild">
