fixat lokal nav

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="sv">
 <head>
     
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CreamiLab - Hem</title>
@@ -11,7 +12,7 @@
   <header>
     <img src="image/creamilab-logo.png" alt="CreamiLab icon">
     <nav>
-      <a href="index.html">Start</a>
+      <a href="index.html" class="active">Start</a>
       <a href="recept.html">Recept</a>
       <a href="skicka-in.html">Skicka in ditt recept</a>
       <a href="om-oss.html">Om oss</a>
