--- a/skicka-in.html
+++ b/skicka-in.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
+
 <body class="skicka-in">
   <header>
     <img src="image/creamilab-logo.png" alt="CreamiLab icon">
     <nav>
       <a href="index.html">Start</a>
       <a href="recept.html">Recept</a>
-      <a href="skicka-in.html">Skicka in ditt recept</a>
+      <a href="skicka-in.html" class="active">Skicka in ditt recept</a>
       <a href="om-oss.html">Om oss</a>
     </nav>
   </header>
