--- a/laktosfri.html
+++ b/laktosfri.html
@@ -30,8 +30,6 @@
                 <li>Använd alltid färska ingredienser för bästa smak och textur.</li>
                 <li>Frys bägaren snabbt, ställ den längst bak i frysen där det är kallast.</li>
                 <li>Låt bägaren stå i rumstemperatur i cirka 10 minuter innan du mixar för bästa textur.</li>
-                <li>Förvara glassen i en lufttät burk för att undvika iskristaller.</li>
-                <li>Låt glassen stå i rumstemperatur 5-10 minuter innan servering för enklare skedning.</li>
                 </ul>
             </div>
 
@@ -54,12 +52,13 @@
                 <li><strong>Mix-in:</strong> Blandar in toppings eller bitar utan att smälta glassen.</li>
                 </ul>
             </div>
+            
         </aside>
 
         <section class="receptlista">
             <nav class="lokal-nav">
-                <a href="recept.html" class="active">Alla recept</a>
-                <a href="laktosfri.html">Laktosfria recept</a>
+                <a href="recept.html">Alla recept</a>
+                <a href="laktosfri.html" class="active">Laktosfria recept</a>
                 <a href="protein.html">Proteinrika recept</a>
                 <a href="korta.html">Under 20 minuter</a>
             </nav>
@@ -73,18 +72,6 @@
                 <a href="recept-glass.html">
                     <img src="image/kaffeglass.jpg" alt="Kaffeglass">
                     <h4>Kaffeglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/kanelbulle.jpg" alt="Kanelbulleglass">
-                    <h4>Kanelbulleglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/saltkaramell.jpg" alt="Saltkaramellglass">
-                    <h4>Saltkaramellglass</h4>
                 </a>
             </div>
             <div class="receptkort">
@@ -103,12 +90,6 @@
                 <a href="recept-glass.html">
                     <img src="image/jordgubbsglass.jpg" alt="Jordgubbsglass">
                     <h4>Jordgubbsglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/daimglass.jpg" alt="Daimglass">
-                    <h4>Daimglass</h4>
                 </a>
             </div>
             <div class="receptkort">
@@ -137,87 +118,8 @@
             </div>
             <div class="receptkort">
                 <a href="recept-glass.html">
-                    <img src="image/mintchokladglass.jpg" alt="Mintchokladglass">
-                    <h4>Mintchokladglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
                     <img src="image/banan-vanilj.jpg" alt="Banan och vaniljglass">
                     <h4>Banan och vaniljglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/kladdkakaglass.jpg" alt="Kladdkakeglass">
-                    <h4>Kladdkakeglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/peanutglass.jpg" alt="Choklad och jordnötssmörsglass">
-                    <h4>Choklad och jordnötssmörsglass</h4>
-                </a>
-            </div>
-             <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/vattenmelon.jpg" alt="Vattenmelon sorbet">
-                    <h4>Vattenmelon sorbet</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/passion.jpg" alt="Passion sorbet">
-                    <h4>Passion sorbet</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/kiwi.jpg" alt="Kiwi sorbet">
-                    <h4>Kiwi sorbet</h4>
-                </a>
-            </div>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/kakdeg.jpg" alt="Kakdegglass">
-                    <h4>Kakdegglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/rockyroad.jpg" alt="Rockyroadglass">
-                    <h4>Rockyroadglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/vitchoklad.jpg" alt="Vitchokladglass">
-                    <h4>Vitchokladglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/cheesecake.jpg" alt="Jordgubbcheesecakeglass">
-                    <h4>Jordgubbcheesecakeglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/banoffee.jpg" alt="Banoffeeglass">
-                    <h4>Banoffeeglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/matcha.jpg" alt="Matchaglass">
-                    <h4>Matchaglass</h4>
-                </a>
-            </div>
-            <div class="receptkort">
-                <a href="recept-glass.html">
-                    <img src="image/dumle.jpg" alt="Dumleglass">
-                    <h4>Dumleglass</h4>
                 </a>
             </div>
             <div class="receptkort">
@@ -232,6 +134,31 @@
                     <h4>Blåbärsglass</h4>
                 </a>
             </div>
+            <div class="receptkort">
+                <a href="recept-glass.html">
+                    <img src="image/vattenmelon.jpg" alt="Vattenmelon sorbet">
+                    <h4>Vattenmelonsorbet</h4>
+                </a>
+            </div>
+            <div class="receptkort">
+                <a href="recept-glass.html">
+                    <img src="image/matcha.jpg" alt="Matchaglass">
+                    <h4>Matchaglass</h4>
+                </a>
+            </div>
+            <div class="receptkort">
+                <a href="recept-glass.html">
+                    <img src="image/passion.jpg" alt="Passion sorbet">
+                    <h4>Passionsorbet</h4>
+                </a>
+            </div>
+            <div class="receptkort">
+                <a href="recept-glass.html">
+                    <img src="image/kiwi.jpg" alt="Kiwi sorbet">
+                    <h4>Kiwisorbet</h4>
+                </a>
+            </div>
+            
         </section>
   </main>
 
