--- a/om-oss.html
+++ b/om-oss.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
+
 <body class="om-oss">
   <header>
     <img src="image/creamilab-logo.png" alt="CreamiLab icon">
@@ -14,7 +15,7 @@
       <a href="index.html">Start</a>
       <a href="recept.html">Recept</a>
       <a href="skicka-in.html">Skicka in ditt recept</a>
-      <a href="om-oss.html">Om oss</a>
+      <a href="om-oss.html" class="active">Om oss</a>
     </nav>
   </header>
 
