--- a/recept-glass.html
+++ b/recept-glass.html
@@ -10,7 +10,9 @@
 
 <body class="recept">
   <header>
+    <a href="index.html">
     <img src="image/creamilab-logo.png" alt="CreamiLab icon">
+    </a>
   </header>
 
   <main class="recept-layout">
