--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body class="index">
   <header>
+    <a href="index.html">
     <img src="image/creamilab-logo.png" alt="CreamiLab icon">
+    </a>
     <nav>
       <a href="index.html" class="active">Start</a>
       <a href="recept.html">Recept</a>
