--- a/om-oss.html
+++ b/om-oss.html
@@ -10,7 +10,9 @@
 
 <body class="om-oss">
   <header>
+    <a href="index.html">
     <img src="image/creamilab-logo.png" alt="CreamiLab icon">
+    </a>
     <nav>
       <a href="index.html">Start</a>
       <a href="recept.html">Recept</a>
