--- a/laktosfri.html
+++ b/laktosfri.html
@@ -62,12 +62,12 @@
                 <a href="recept.html">Alla recept</a>
                 <a href="laktosfri.html" class="active">Laktosfria recept</a>
                 <a href="protein.html">Proteinrika recept</a>
-                <a href="korta.html">Under 20 minuter</a>
+                <a href="korta.html">Recept under 20 minuter</a>
             </nav>
             <div class="receptkort">
                 <a href="recept-glass.html">
                     <img src="image/vaniljglass.jpg" alt="Vaniljglass">
-                    <h4>Klassisk vaniljglass</h4>
+                    <h4>Laktosfri vaniljglass</h4>
                 </a>
             </div>
             <div class="receptkort">
