--- a/om-oss.html
+++ b/om-oss.html
@@ -35,7 +35,7 @@
                 </picture>
             </div>
             <div class="startkort" id="mission">
-                <h3>Vårt mission</h3>
+                <h3>Vår vision</h3>
                 <p>Vi vill att alla ska kunna delta i vårt laboratorium! Därför fyller vi ständigt på vår receptbank med inskickade bidrag. Men varje recept testas noggrant av vårt team innan det når hyllorna. Vi vill att varje glassupplevelse ska vara lika perfekt som en vetenskaplig upptäckt.</p>
                 <p>Hos oss är glass mer än bara dessert. Det är forskning och kreativitet. Här får smakerna frodas, idéerna bubbla och varje glassälskare känna sig som en del av vårt labb. Så kom in, experimentera med oss och hitta din nästa favoritglass!</p>
             </div>
