--- a/recept.html
+++ b/recept.html
@@ -63,7 +63,7 @@
                 <a href="recept.html" class="active">Alla recept</a>
                 <a href="laktosfri.html">Laktosfria recept</a>
                 <a href="protein.html">Proteinrika recept</a>
-                <a href="korta.html">Under 20 minuter</a>
+                <a href="korta.html">Recept under 20 minuter</a>
             </nav>
             <div class="receptkort">
                 <a href="recept-glass.html">
