--- a/korta.html
+++ b/korta.html
@@ -62,7 +62,7 @@
                 <a href="recept.html">Alla recept</a>
                 <a href="laktosfri.html">Laktosfria recept</a>
                 <a href="protein.html">Proteinrika recept</a>
-                <a href="korta.html" class="active">Under 20 minuter</a>
+                <a href="korta.html" class="active">Recept under 20 minuter</a>
             </nav>
             <div class="receptkort">
                 <a href="recept-glass.html">
