--- a/laktosfri.html
+++ b/laktosfri.html
@@ -73,25 +73,25 @@
             <div class="receptkort">
                 <a href="recept-glass.html">
                     <img src="image/kaffeglass.jpg" alt="Kaffeglass">
-                    <h4>Kaffeglass</h4>
+                    <h4>Laktosfri kaffeglass</h4>
                 </a>
             </div>
             <div class="receptkort">
                 <a href="recept-glass.html">
                     <img src="image/chokladglass.jpg" alt="Chokladglass">
-                    <h4>Chokladglass</h4>
+                    <h4>Laktosfri chokladglass</h4>
                 </a>
             </div>
             <div class="receptkort">
                 <a href="recept-glass.html">
                     <img src="image/pistage.jpg" alt="Pistageglass">
-                    <h4>Pistageglass</h4>
+                    <h4>Laktosfri pistageglass</h4>
                 </a>
             </div>
             <div class="receptkort">
                 <a href="recept-glass.html">
                     <img src="image/jordgubbsglass.jpg" alt="Jordgubbsglass">
-                    <h4>Jordgubbsglass</h4>
+                    <h4>Laktosfri jordgubbsglass</h4>
                 </a>
             </div>
             <div class="receptkort">
@@ -121,7 +121,7 @@
             <div class="receptkort">
                 <a href="recept-glass.html">
                     <img src="image/banan-vanilj.jpg" alt="Banan och vaniljglass">
-                    <h4>Banan och vaniljglass</h4>
+                    <h4>Laktosfri banan och vaniljglass</h4>
                 </a>
             </div>
             <div class="receptkort">
@@ -133,7 +133,7 @@
             <div class="receptkort">
                 <a href="recept-glass.html">
                     <img src="image/blueberry.jpg" alt="Blåbärsglass">
-                    <h4>Blåbärsglass</h4>
+                    <h4>Laktosfri blåbärsglass</h4>
                 </a>
             </div>
             <div class="receptkort">
@@ -145,7 +145,7 @@
             <div class="receptkort">
                 <a href="recept-glass.html">
                     <img src="image/matcha.jpg" alt="Matchaglass">
-                    <h4>Matchaglass</h4>
+                    <h4>Laktosfri matchaglass</h4>
                 </a>
             </div>
             <div class="receptkort">
